k8s/cicddemo-deployment-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicddemo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cicddemo
  template:
    metadata:
      labels:
        app: cicddemo
    spec:
      securityContext:
        runAsUser: 1000
      hostname: cicddemo  
      containers:
        - name: cicddemo
          image: isandesh/cicddemo1:latest
          resources:
            limits:
              memory: "2048Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8090
