k8s/cicddemo-service-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicddemo
  labels:
    app: cicddemo
spec:
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    app: cicddemo
